fixes horizontal scrollbar bug #46

--- a/3d-card-flip/styles.css
+++ b/3d-card-flip/styles.css
@@ -25,6 +25,8 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 body {
@@ -52,6 +54,7 @@ sc-card .back {
   align-items: center;
   justify-content: center;
   border-radius: 3px;
+  overflow: hidden;
 }
 
 sc-card button {
